// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page renders login page 1`] = `
<div>
  <div
    class="auth"
  >
    <h2
      class="auth-header"
    >
      Login:
    </h2>
    <div
      class="auth-header-border"
    />
    <div
      class="auth-inputs"
    >
      <input
        class="form-control auth-input"
        data-testid="Email"
        placeholder="Email"
        type="email"
        value=""
      />
      <input
        class="form-control auth-input"
        data-testid="Password"
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      class="my-3 btn btn-primary auth-btn"
      disabled=""
    >
      Login
    </button>
    <hr />
    <a
      class="register-link"
      data-testid="register-link"
      href="/register"
    >
      Click Here to Register
    </a>
  </div>
</div>
`;

exports[`Register Page renders register page 1`] = `
<div>
  <div
    class="auth"
  >
    <h2
      class="auth-header"
    >
      Register:
    </h2>
    <div
      class="auth-header-border"
    />
    <div
      class="auth-inputs"
    >
      <input
        class="form-control auth-input"
        placeholder="Name"
        required=""
        type="text"
        value=""
      />
      <input
        class="form-control auth-input"
        data-testid="Email"
        placeholder="Email"
        required=""
        type="email"
        value=""
      />
      <input
        class="form-control auth-input"
        data-testid="Password"
        placeholder="Password"
        required=""
        type="password"
        value=""
      />
      <input
        class="form-control auth-input"
        data-testid="confirmPassword"
        placeholder="Confirm Password"
        required=""
        type="password"
        value=""
      />
    </div>
    <button
      class="my-3 btn btn-primary auth-btn"
      disabled=""
    >
      Register
    </button>
    <a
      class="login-link"
      data-testid="login-link"
      href="/login"
    >
      Click Here to Login
    </a>
  </div>
</div>
`;
